fix for custom-select double arrows on safari

--- a/component/app/styles/sections/_community.scss
+++ b/component/app/styles/sections/_community.scss
@@ -26,6 +26,10 @@ Community Projects Page
     display: none;
 }
 
+.custom-select-webkit-fix {
+    -webkit-appearance: none;
+}
+
 /* ----------------------------------------------------------
 Loading
 ------------------------------------------------------------*/
